# pytorch-sso

./: LICENSE  README.md  setup.cfg
examples/classification/: README.md  main.py
examples/classification/configs/cifar10/: lenet_adam.json  lenet_kfac.json  lenet_noisykfac.json  lenet_vogn.json
examples/classification/configs/mnist/: mlp_madam.json  mlp_vogn.json
examples/classification/models/: mnist_mlp.py
examples/continual-learning/: README.md  data_generators.py  main.py
examples/continual-learning/configs/: mlp_vogn.json
examples/continual-learning/models/: mlp.py
examples/distributed/: README.md
examples/distributed/classification/: README.md  main.py
tests/: test_batched_grads.py  test_curv.py  test_grad2col.py  test_im2col.py  test_jacobian.py  test_samplegrad.py
torchsso/: __init__.py
torchsso/autograd/: __init__.py  fisher.py  gradient.py  samplegrad.py  utils.py
torchsso/autograd/operations/: __init__.py  conv.py  linear.py  operation.py
torchsso/curv/: __init__.py  curvature.py
torchsso/curv/cov/: batchnorm.py  conv.py  linear.py
torchsso/curv/fisher/: __init__.py  batchnorm.py  conv.py  linear.py
torchsso/curv/hessian/: __init__.py  conv.py  linear.py
torchsso/optim/: __init__.py  firstorder.py  lr_scheduler.py  secondorder.py  vi.py
torchsso/utils/: __init__.py  accumulator.py  cholesky_cupy.py  cupy.py  grad2col.py  im2col.py  inv_cupy.py  logger.py  metainit.py
torchsso/utils/chainer_communicators/: __init__.py  _utility.py  base.py  pure_nccl_communicator.py
(+11 files in other folders)
