[metadata]
name = torchsso
version = 0.1.1
url = https://github.com/cybertronai/pytorch-sso
author = Kazuki Osawa
author_email = osawa1021@gmail.com
license_file = LICENSE
description = PyTorch-SSO: Scalable Second-Order Optimization Methods in PyTorch.
long_description = file: README.md
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
packages = find:
install_requires =
  torch
  torchvision
  chainer
  Pillow
  numpy
  scipy
